examples/test/testpolicy12617.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12617
  namespace: namespace204
spec:
  podSelector:
    matchLabels:
      key14: value18
      key16: value11
      key31: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value4
      podSelector:
        matchLabels:
          key48: value35
          key24: value11
